# tappas

./: .config  README.md  README.rst  bitbucket-pipelines.yml  build_docker.sh  build_docker_cross_compile.sh  build_docker_internal.sh  check_system_requirements.sh  create_deb_package.sh  install.sh  uninstall.sh
apps/h15/native/: meson.build  meson_options.txt
apps/h15/native/ai_example_app/: README.rst  ai_example_app.rst  main.cpp  meson.build
apps/h15/native/ai_example_app/configs/: encoder_osd_sink0.json  encoder_osd_sink1.json  encoder_osd_sink2.json  frontend_config.json  frontend_config_denoise.json  frontend_config_hdr.json
apps/h15/native/ai_example_app/docs/: app_structure.rst  compiling.rst  pipeline.rst
apps/h15/native/ai_example_app/infra/: ai_stage.hpp  pipeline.hpp  queue.hpp  stage.hpp  udp_stage.hpp
apps/h15/native/reference_camera_api/: meson.build  reference_camera_infra.cpp
apps/h15/native/reference_camera_api/pipeline_infra/: aggregator_stage.hpp  dsp_stages.hpp  overlay_native.hpp  overlay_stage.hpp  tracker_stage.hpp
apps/h8/native/detection/: detection_app.cpp  detection_app.hpp  double_buffer.hpp  meson.build
apps/native/detection/: CMakeLists.txt  README.md  README.rst  bitmap_utils.cpp  bitmap_utils.hpp  detection_app.cpp  double_buffer.hpp  meson.build  yolov5.json  yolov5_post_processing.cpp  yolov5_post_processing.hpp
core/hailo/: hailo_shortcuts  hailo_shortcuts.bash  meson.build  meson_options.txt
core/hailo/apps/: meson.build
core/hailo/apps/hailo15/: apps_common.cpp  apps_common.hpp  meson.build
core/hailo/apps/imx/: meson.build
core/hailo/apps/x86/: meson.build
core/hailo/general/: hailo_common.hpp  hailo_cv_singleton.cpp  hailo_cv_singleton.hpp  hailo_objects.hpp  hailo_tensors.hpp  hailo_xtensor.hpp
core/hailo/gstreamer/: meson.build  meson_options.txt
core/hailo/gstreamer/apps/: meson.build
core/hailo/gstreamer/libs/: meson.build
core/hailo/gstreamer/metadata/: gst_hailo_cropping_meta.hpp  gst_hailo_meta.cpp  hailo_detection.hpp  hailo_tensor.hpp  meson.build
core/hailo/gstreamer/plugins/: gsthailofilter.cpp  gsthailofilter.hpp  gsthailofilter2.cpp  gsthailofilter2.hpp  gsthailomuxer.cpp  gsthailotools.cpp  meson.build
core/hailo/gstreamer/tracking/: hailo_tracker.cpp  hailo_tracker.hpp  meson.build
core/hailo/libs/croppers/: meson.build
core/hailo/libs/postprocesses/: meson.build
core/hailo/libs/tools/: debug.cpp  debug.hpp  meson.build  parse_hef.cpp  set_stream_id.cpp  set_stream_id.hpp
core/hailo/metadata/: gst_hailo_counter_meta.cpp  gst_hailo_counter_meta.hpp  gst_hailo_cropping_meta.cpp  gst_hailo_meta.hpp  gst_hailo_stream_meta.cpp  gst_hailo_stream_meta.hpp  meson.build
core/hailo/plugins/: gsthailotools.cpp  meson.build
core/hailo/plugins/common/: gsthailonvalve.cpp  hailomat.hpp  image.cpp  image.hpp
core/hailo/plugins/cropping/: gsthailoaggregator.cpp  gsthailoaggregator.hpp  gsthailobasecropper.cpp  gsthailobasecropper.hpp  gsthailocropper.cpp  gsthailocropper.hpp
core/hailo/plugins/dsp/: gsthailodsp.c  gsthailodsp.h  gsthailodspbasetransform.cpp  gsthailodspbasetransform.hpp  gsthailodspbufferpool.cpp  gsthailodspbufferpool.hpp  gsthailodspbufferpoolutils.cpp  gsthailodspbufferpoolutils.hpp  gsthailovideoscale.cpp  gsthailovideoscale.hpp
core/hailo/plugins/encoder/: enc_common.h  gopconfig.c  gopconfig.h  gsthailoenc.c  gsthailoenc.h  gsthailoh264enc.c  gsthailoh264enc.h  gsthailoh265enc.c  gsthailoh265enc.h  hailoencoder.c  hailoencoder.h  meson.build
core/hailo/plugins/export/: encode_json.hpp
core/hailo/plugins/filter/: gsthailocounter.cpp  gsthailocounter.hpp  gsthailofilter.cpp  gsthailofilter.hpp  gsthailonvalve.cpp  gsthailonvalve.hpp
core/hailo/plugins/gray_scale/: gsthailograytonv12.cpp  gsthailograytonv12.hpp  gsthailonv12togray.cpp  gsthailonv12togray.hpp
core/hailo/plugins/import/: decode_json.hpp
core/hailo/plugins/muxer/: gsthailomuxer.cpp  gsthailomuxer.hpp  gsthailoroundrobin.cpp  gsthailoroundrobin.hpp  gsthailostreamrouter.cpp  gsthailostreamrouter.hpp
core/hailo/plugins/overlay/: gsthailooverlay.cpp  gsthailooverlay.hpp  overlay.cpp  overlay.hpp
core/hailo/plugins/python/: gsthailopython.cpp  hailo_python_api.cpp  hailo_python_api_sanity.py  hailopython_infra.cpp  hailopython_infra.hpp
core/hailo/plugins/tiling/: gsthailotileaggregator.cpp  gsthailotilecropper.cpp  gsthailotilecropper.hpp
core/hailo/plugins/tracking/: gsthailotracker.cpp  gsthailotracker.hpp
core/hailo/python/gsthailo/: __init__.py  video_frame.py
core/hailo/tracers/: gstbitrate.cpp  gstbitrate.hpp  gstbuffer.cpp  gstbuffer.hpp  gstbufferdrop.cpp  gstbufferdrop.hpp  gstcpuusage.cpp  gstcpuusage.hpp  gstcpuusagecompute.cpp  gstcpuusagecompute.hpp  gstctf.cpp  gstctf.hpp  gstdetections.cpp  gstdetections.hpp  gstdot.c  gstdot.h  gstframerate.cpp  gstframerate.hpp  gstgraphic.cpp  gstgraphic.h  gstgraphic.hpp  gstinterlatency.cpp  gstinterlatency.hpp  gstnumerator.cpp  gstnumerator.hpp  gstparser.h  gstperiodictracer.cpp  gstperiodictracer.hpp  gstplugin.cpp  gstproctime.cpp  gstproctime.hpp  gstproctimecompute.cpp  gstproctimecompute.hpp  gstqueuelevel.cpp  gstqueuelevel.hpp  gstscheduletime.cpp  gstscheduletime.hpp  gstsharktracer.cpp  gstsharktracer.hpp  gstthreadmonitor.cpp  (+4 more)
core/hailo/tracking/: hailo_tracker.cpp  hailo_tracker.hpp  meson.build
core/hailo/tracking/jde_tracker/: jde_tracker.hpp  jde_tracker_converters.hpp  jde_tracker_update.hpp  kalman_filter.hpp  lapjv.hpp  strack.hpp
core/hailo/unit_tests/: meson.build
core/hailo/unit_tests/common/: common.hpp
core/hailo/unit_tests/cropper_tests/: lpr_cropper_tests.cpp
core/hailo/unit_tests/element_tests/: meson.build
core/hailo/unit_tests/export_tests/: encode_json_tests.cpp  meson.build
core/hailo/unit_tests/gallery_tests/: gallery_tests.cpp
core/hailo/unit_tests/import_tests/: decode_json_tests.cpp  meson.build
core/hailo/unit_tests/postprocess_tests/: debug_tests.cpp  meson.build
core/hailo/unit_tests/tracker_tests/: jde_tracker_tests.cpp  kalman_filter_tests.cpp  strack_tests.cpp
(+984 files in other folders)
