option('libargs', type : 'array', value : [])
option('libxtensor', type : 'string', value : '../../open_source/xtensor_stack/base')
option('libcxxopts', type : 'string', value : '../../open_source/cxxopts')
option('libblas', type : 'string', value : '../../open_source/xtensor_stack/blas')
option('libopencv', type : 'string', value : '../../../open_source/opencv/include/opencv4')
option('libcatch2', type : 'string', value : '../../../open_source/catch2')
option('pybind11', type : 'string', value : '../../open_source/pybind11/')
option('libgst_plugins_path', type : 'string', value : './plugins/')
option('include_blas', type : 'boolean', value : false)

option('include_python', type : 'boolean', value : false)
option('python_version', type : 'string', value : '3.6')
option('include_network_switch_app', type : 'boolean', value : true)
option('libgeneral_path', type : 'string', value : '../general')
# option('hailo_python', type : 'string', value : './plugins/hailo_python/')
